sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: not found: value i
		if(plusPetit(i-1,i) && plusPetit(i,i+1))
                             ^AlgGnomeSort:10: error: not found: value i
				i=i-1;
                                ^AlgGnomeSort:13: error: not found: value i
			echange(i+1,i-1);
                                ^AlgGnomeSort:15: error: not found: value i
			i = i-1;
                        ^AlgGnomeSort:18: error: not found: value i
	}while(hasSwap && i ==1)
                          ^